--- a/HOL02-AML/HOL-Azure Machine Learning service.ipynb
+++ b/HOL02-AML/HOL-Azure Machine Learning service.ipynb
@@ -142,7 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "green_taxi_df = pd.read_parquet(\"./data/taxi_raw_df.parquet\")"
+    "green_taxi_df = pd.read_parquet(\"./data/taxi_raw_df.parquet\")\n",
+    "green_taxi_df.head()"
    ]
   },
   {
@@ -666,6 +667,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from azureml.core.runconfig import DataReferenceConfiguration\n",
+    "\n",
+    "dr = DataReferenceConfiguration(datastore_name=ds.name, \n",
+    "                   path_on_datastore='data', \n",
+    "                   path_on_compute='/tmp/azureml_runs',\n",
+    "                   mode='download', # download files from datastore to compute target\n",
+    "                   overwrite=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "\n",
     "project_folder = \"aml_prj\"\n",
@@ -783,21 +799,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.core.runconfig import DataReferenceConfiguration\n",
-    "\n",
-    "dr = DataReferenceConfiguration(datastore_name=ds.name, \n",
-    "                   path_on_datastore='data', \n",
-    "                   path_on_compute='/tmp/azureml_runs',\n",
-    "                   mode='download', # download files from datastore to compute target\n",
-    "                   overwrite=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -885,7 +886,7 @@
     "\n",
     "automl_config = AutoMLConfig(task='regression',\n",
     "                            iteration_timeout_minutes=30,\n",
-    "                            iterations=20,\n",
+    "                            iterations=2,\n",
     "                            featurization='auto',\n",
     "                            primary_metric='normalized_root_mean_squared_error',\n",
     "                            training_data=train_data_dprep,\n",
